crates/jsonschema-codegen/tests/ui/invalid_exclusive_minimum_type.rs
#[jsonschema::validator(schema = r#"{"exclusiveMinimum":"x"}"#)]
struct InvalidExclusiveMinimumTypeValidator;

fn main() {}
